[package]
name = "rust-api"
version = "0.1.0"
authors = ["Elton Zheng <elton.zheng.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-httpauth = "0.4.2"
chrono = { version = "0.4.13", features = ["serde"] }
derive_more = "0.99.9"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.5"
r2d2 = "0.8.9"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
actix-service = "1.0.6"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.7"
actix-rt = "1.1.1"